--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       name="description"
       content="Rafael & Thaína - Nossa história de amor"
     />
-    <meta name="theme-color" content="#ec4899" />
-    <title>Rafael & Thaína ❤️ | Nossa História de Amor</title>
+    <meta name="theme-color" content="#ff8c73" />
+    <title>Rafael & Thaína ❤️</title>
     <style>
       /* Loading screen */
       #loading {
         position: fixed;
         inset: 0;
-        background: linear-gradient(135deg, #ec4899, #a855f7);
+        background: linear-gradient(135deg, #ff8c73, #b599ff);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -30,8 +30,9 @@
         pointer-events: none;
       }
       .heart-loader {
-        font-size: 4rem;
+        font-size: 5rem;
         animation: heartbeat 1s ease-in-out infinite;
+        filter: drop-shadow(0 10px 30px rgba(255, 107, 74, 0.5));
       }
       @keyframes heartbeat {
         0%,
@@ -39,7 +40,7 @@
           transform: scale(1);
         }
         50% {
-          transform: scale(1.2);
+          transform: scale(1.3);
         }
       }
     </style>
