--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     />
     <meta
       name="description"
-      content="Rafael & Thaína - Nossa história de amor"
+      content="Rafael & Thainá - Nossa história de amor"
     />
     <meta name="theme-color" content="#ff8c73" />
-    <title>Rafael & Thaína ❤️</title>
+    <title>Rafael & Thainá ❤️</title>
     <style>
       /* Loading screen */
       #loading {
